# rust-splitwise

./: .env  .gitignore  Cargo.toml  fib.py
migrations/2023-06-12-153252_create_users/: up.sql
migrations/2023-06-15-082828_create_groups/: down.sql  up.sql
src/: context.rs  lib.rs  main.rs
src/cli/: base.rs  group_mngmt.rs  mod.rs  user_mngmt.rs
src/db/: models.rs  queries.rs  schema.rs
src/lib/db/: mod.rs  models.rs  queries.rs  schema.rs
