[package]
name = "rust-splitwise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
inquire = "0.6.2"

[dev-dependencies]
diesel_cli = { version = "2.1.0", default-features = false, features = ["sqlite"] }
